--- a/scientific_calculations.ipynb
+++ b/scientific_calculations.ipynb
@@ -380,7 +380,19 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "lenghts = [riv_p.data().lenght() for riv_p in model.rivers]\n",
+    "\n",
+    "[x, y] = np.histogram(lenghts)\n",
+    "print(max(lenghts))\n",
+    "print(min(lenghts))\n",
+    "\n",
+    "plt.hist(lenghts, log=True, bins=np.logspace(np.log(min(lenghts)), np.log10(max(lenghts)), 30))\n",
+    "plt.xscale('log')\n",
+    "plt.xlim(min(lenghts), max(lenghts))\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -438,6 +450,21 @@
     "\n",
     "\n",
     "plt.bar(bins_arr_mid, hist_norm, widths)\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')\n",
+    "plt.xlim(min(lenghts), max(lenghts))\n",
+    "\n",
+    "\n",
+    "# old one\n",
+    "import numpy as np\n",
+    "lenghts = [riv_p.data().lenght() for riv_p in model.rivers]\n",
+    "b = np.logspace(np.log(min(lenghts)), np.log10(max(lenghts)), 30)\n",
+    "widths = (b[1:] - b[:-1])\n",
+    "hist = np.histogram(lenghts, bins = b)\n",
+    "hist_norm = hist[0] / widths\n",
+    "\n",
+    "\n",
+    "plt.bar(b[:-1], hist_norm, widths)\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlim(min(lenghts), max(lenghts))"
@@ -805,9 +832,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit",
    "language": "python",
@@ -825,7 +849,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
