--- a/master_thesis/bibliography.bib
+++ b/master_thesis/bibliography.bib
@@ -1,3 +1,10 @@
+@misc{adaptivemeshdealii,
+  title = {Deal.II: Adaptive local refinement. Higher order elements. www.dealii.org/current/doxygen/deal.II/step\_6.html},
+  url = {https://www.dealii.org/current/doxygen/deal.II/step_6.html}
+}
+
+
+
 @book{Press2007,
   added-at = {2010-07-28T15:16:23.000+0200},
   asin = {0521880688},
@@ -500,7 +507,7 @@ url = {paulslab.com}}
 @article{peterson1998singular,
   author = {Peterson, Mark A.},
   title = {Singular {Laplacian} growth},
-  journal = {Phys. Rev. E},
+  journal = {Physical Review E},
   year = {1998},
   volume = {57},
   pages = {3221--3226},
